<?xml version="1.0"?>
<package format="2">
  <name>apollo_decision</name>
  <version>0.0.0</version>
  <description>The apollo_decision package</description>

  <maintainer email="forrest@todo.todo">forrest</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>apollo_msgs</build_depend>
  <build_export_depend>apollo_msgs</build_export_depend>
  <exec_depend>apollo_msgs</exec_depend>

  <build_depend>apollo_common</build_depend>
  <build_export_depend>apollo_common</build_export_depend>
  <exec_depend>apollo_common</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
