<?xml version="1.0"?>
<package format="2">
  <name>apollo_simulator</name>
  <version>1.0.0</version>
  <description>The apollo_simulator package</description>
  <maintainer email="709335543@qq.com">Forrest</maintainer>
  <author email="709335543@qq.com">Forrest</author>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf</depend>
  <depend>roslint</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>apollo_msgs</depend>
  <depend>apollo_common</depend>

</package>
